--- a/unreleased.html
+++ b/unreleased.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="lib/p5.js"></script>
-    <script src="lib/p5.sound.min.js"></script>
+    <head>
+        <script src="lib/p5.js"></script>
+        <script src="lib/p5.sound.min.js"></script>
       
-    <link rel="stylesheet" type="text/css" href="unreleased.css">
-    <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="unreleased.css">
+        <meta charset="utf-8" />
 
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="main.js"></script>
-    <script src="PlayerManager.js"></script>
-    <script src="Player.js"></script>
-    <script src="Button.js"></script> 
-  </body>
+    </head>
+    <body>
+        <script src="main.js"></script>
+        <script src="PlayerManager.js"></script>
+        <script src="Player.js"></script>
+        <script src="PlayerButton.js"></script> 
+        <script src="ControlBar.js"></script>
+    </body>
 </html>
 
