added current time slider

--- a/unreleased.html
+++ b/unreleased.html
@@ -13,6 +13,7 @@
         <script src="PlayerManager.js"></script>
         <script src="Player.js"></script>
         <script src="PlayerButton.js"></script> 
+        <script src="PlayerSlider.js"></script> 
         <script src="ControlBar.js"></script>
         <script src="ControlBarButton.js"></script>
     </body>
